3.4.4
- Fixes:
  * Imagick::getRegistry() now throws an exception if the key does not exist, rather than terminating the program.

3.4.3
- Fixes:
  * Imagick::transformImage and Imagick::orderedPosterizeImage now correctly excluded from 
  IM7 build.
  * Bug 72311 - compiling against PHP 7.1.
  * Bug 72226 - regression for Imagick Exception classes being final on 7.x
  * Corrected reference of constants. Imagick::METRIC_MEANERRORPERPIXELMETRIC from MeanErrorPerPixelMetric to MeanErrorPerPixelErrorMetric. Imagick::METRIC_PEAKSIGNALTONOISERATIO from PeakSignalToNoiseRatioMetric to PeakSignalToNoiseRatioErrorMetric
- Added:
  * function Imagick::identifyImageType() : int returns one of the Imagick::IMGTYPE_* constants
  * Imagick::INTERPOLATE_NEAREST_PIXEL for ImageMagick >= 7
  * In ImageMagick, the names of two filter constants were corrected to the standard spelling. Support for the new spelling has been added. The old constants are left in place for legacy support.
    Legacy: FILTER_HANNING, new name: FILTER_HANN
    Legacy: FILTER_WELSH,  new name: FILTER_WELCH
  * The Imagick::IMGTYPE_*MATTE* constants are deprecated for ImageMagick 7. Instead an appropriate Imagick::IMGTYPE_*MATTE* should be used.
    IMGTYPE_GRAYSCALEMATTE => IMGTYPE_GRAYSCALEALPHA
    IMGTYPE_PALETTEMATTE => IMGTYPE_PALETTEALPHA
    IMGTYPE_TRUECOLORALPHA => IMGTYPE_TRUECOLORMATTE
    IMGTYPE_COLORSEPARATIONALPHA =>  IMGTYPE_COLORSEPARATIONMATTE
    IMGTYPE_PALETTEBILEVELALPHA => IMGTYPE_PALETTEBILEVELMATTE
  * Several ALPHACHANNEL_* constants are only available in ImageMagick < 7 
    IMAGICK_REGISTER_CONST_LONG("ALPHACHANNEL_RESET", ResetAlphaChannel);
    IMAGICK_REGISTER_CONST_LONG("ALPHACHANNEL_COPY", CopyAlphaChannel);
    IMAGICK_REGISTER_CONST_LONG("ALPHACHANNEL_OPAQUE", OpaqueAlphaChannel);
  * Several ALPHACHANNEL_* constants are only available in ImageMagick >= 7. These constants re-use the values of the constants removed.